--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
 #   Use the Docker Image postgres. This will pull the newest release.
     image: "postgres"
 #   Give the container the name my_postgres. You can changes to something else.
-    container_name: "database"
+    container_name: "namosca_db"
 #   Setup the username, password, and database name. You can changes these values.
     environment:
       - POSTGRES_USER=postgres
@@ -13,7 +13,7 @@ services:
       - POSTGRES_DB=stand
 #   Maps port 54320 (localhost) to port 5432 on the container. You can change the ports to fix your needs.
     ports:
-      - "50001:50001"
+      - "5440:5440"
 #   Set a volume some that database is not lost after shutting down the container.
 #   I used the name postgres-data but you can changed it to something else.
     volumes:
@@ -24,7 +24,7 @@ services:
       context: ./server
       args:
         db_url: jdbc:postgresql://db/stand
-    container_name: server
+    container_name: namosca_server
     links:
       - "db:db"
     ports:
@@ -34,7 +34,7 @@ services:
 
   client:
     image: "node:13"
-    container_name: client
+    container_name: namosca_client
     ports:
       - "4000:3000"
     volumes:
