--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -9,5 +9,8 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.resources.add-mappings=false
+
 
 spring.flyway.locations=classpath:db/migration/
