--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,16 +1,19 @@
 server.port=9090
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
-spring.datasource.url=${DB_URL}
+spring.datasource.url=${URL_DB:jdbc:postgresql://localhost:5432/namosca_db}
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
 
-
 spring.flyway.locations=classpath:db/migration/
+spring.flyway.baseline-on-migrate=false
+spring.flyway.url= ${URL_DB:jdbc:postgresql://localhost:5432/namosca_db}
+spring.flyway.user= postgres
+spring.flyway.password= postgres
