--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=9090
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
-spring.datasource.url=${URL_DB:jdbc:postgresql://localhost:5432/namosca_db}
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/namosca_db}
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.show-sql=true
@@ -14,6 +14,6 @@ spring.resources.add-mappings=false
 
 spring.flyway.locations=classpath:db/migration/
 spring.flyway.baseline-on-migrate=false
-spring.flyway.url= ${URL_DB:jdbc:postgresql://localhost:5432/namosca_db}
+spring.flyway.url= ${DB_URL:jdbc:postgresql://localhost:5432/namosca_db}
 spring.flyway.user= postgres
 spring.flyway.password= postgres
