--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -7,6 +7,8 @@
   "plugins": ["react", "jsx-a11y", "import"],
   "extends": ["standard-react","standard"],
   "rules": {
+    "react/prop-types": 0,
+    "semi": ["error", "never"],
     "react/jsx-filename-extension": [
       "error",
       {
