--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"axios": "^0.19.0",
 		"bootstrap": "^4.4.1",
+		"date-fns": "^2.8.1",
 		"font-awesome": "^4.7.0",
 		"prop-types": "^15.7.2",
 		"react": "^16.12.0",
