--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.mvc.throw-exception-if-no-handler-found=true
